# modellm

./: .gitignore  AGENTS.md  BUG_SUMMARY.md  CR-08_implementation_summary.md  MIGRATION_PLAN.md  PHASE_4_5_SUMMARY.md  PROMPT_REWRITE_SUMMARY.md  PROMPT_UPDATE_SUMMARY.md  README.md  SOLUTION_SUMMARY.md  SUMMARY.md  TESTING_PLAN.md  check_prompt_structure.py  debug_test.py  debug_typedb.py  developer_todo.md  find_call.py  find_call2.py  find_input.py  find_prompt_method.py  find_prompt_method2.py  find_tags.py  find_type_placeholder.py  find_you_will_receive.py  migration_proposal.md  prompt_output.txt  prompt_step1_v2.md  prompt_step2_original.txt  prompt_step2_v2.md  prompt_step3_v2.md  prompt_step_C3.md  prompt_step_C4.md  prompt_step_C5.md  pyproject.toml  refactor_prompts.py  refactor_prompts_v2.py  refactor_prompts_v3.py  refactor_prompts_v4.py  show_cli_output.py  show_execute_step.py  (+26 more)
configuration/: pipeline_config.yaml
doc/: API.md  CR022626_migration_task_list.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  TypeQL3_REF.md  compression_alignment_report.md  feature_matrix.md  json_compression.md  json_validator_refactor_proposal.md  json_validator_review_summary.md  migration_proposal.md  migration_task_list.md  prompt_pipeline_compression.md  prompt_pipeline_guide.md  schema_transformation_example.md  todo_list_nl_spec.md  todo_list_spec_2.yaml  typedb_http_api.md  typedb_llm_reasoning.md  typedb_schema_2.tql  workflow_guide.md
json/: aggregations.json  messageAggregations.json  messages.json  requirements.json
prompt_pipeline/: debug_sql_injection.py  debug_validation.py  exceptions.py  file_utils.py  label_registry.py  llm_client.py  orchestrator.py  preamble_generator.py  prompt_manager.py  query_patterns.py  step_executor.py  step_executor_dry_run.py  tag_replacement.py  terminal_utils.py  typedb_integration.py
prompt_pipeline/compression/: __init__.py  manager.py
prompt_pipeline/importer/: __init__.py  importer.py
prompt_pipeline/validation/: __init__.py  json_validator.py  yaml_schema_validator.py  yaml_validator.py
prompt_pipeline_cli/: __init__.py  input_validation.py  main.py
prompt_pipeline_cli/commands/: __init__.py  config.py  import_cmd.py  run_pipeline.py  run_step.py  validate.py
prompts/: prompt_step1_v2.md  prompt_step2_v2.md  prompt_step3_v2.md  prompt_step_C3.md  prompt_step_C4.md  prompt_step_C5.md  prompt_step_D1.md
schemas/: aggregations.schema.json  concepts.schema.json  messageAggregations.schema.json  messages.schema.json  pipeline_config.schema.json  requirements.schema.json  spec_yaml_schema.json
tests/: __init__.py  conftest.py  test_auth.py  test_client_integration.py  test_database.py  test_database_integration.py  test_dry_run.py  test_entities.py  test_entity_manager.py  test_queries.py  test_queries_integration.py  test_query_builder.py  test_schema.py  test_transaction_type.py  test_validation.py  test_wipe.py
tests/fixtures/: test_concepts.json
tests/test_prompt_pipeline/: __init__.py  test_cli_dry_run.py  test_compression_anchors.py  test_compression_concepts.py  test_compression_hierarchical.py  test_json_compression.py  test_json_validator.py  test_orchestrator.py  test_prompt_manager.py  (+4 more)
tool/: typedb_concepts_import.py  typedb_import.py
tools/: typedb_import.py
(+48 files in other folders)
